[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "mutable"
path = "src/mutable.rs"

[[bin]]
name = "memory"
path = "src/memory.rs"

[[bin]]
name = "owner"
path = "src/owner.rs"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "mutableref"
path = "src/mutableref.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "implementstruct"
path = "src/implementstruct.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"