[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "mutable"
path = "src/mutable.rs"

[[bin]]
name = "memory"
path = "src/memory.rs"

[[bin]]
name = "owner"
path = "src/owner.rs"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "mutableref"
path = "src/mutableref.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "implementstruct"
path = "src/implementstruct.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "resultenum"
path = "src/resultenum.rs"

[[bin]]
name = "optionenum"
path = "src/optionenum.rs"

[[bin]]
name = "userand"
path = "src/userand.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap.rs"

[[bin]]
name = "iterator"
path = "src/iterator.rs"

[[bin]]
name = "slices"
path = "src/slices.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

